--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,17 @@
-<p>hello</p>
+<form action="/users" method="post" accept-charset="utf-8">
+<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+<label for="username">User name:</label>
+</br>
+<input type="text" id="username" name="user[username]">
+</br>
+<label for="email">Email address:</label>
+</br>
+<input type="email" id="email" name="user[email]" placeholder="your@eamil.com">
+</br>
+<label for="password">Password:</label>
+</br>
+<input type="password" id="password" name="user[password]">
+</br>
+</br>
+<button type="submit" value="submit">Submit</button>
+</form>
