form_tag version complete on new html

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<!-- 
 <form action="/users" method="post" accept-charset="utf-8">
 <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 <label for="username">User name:</label>
@@ -14,4 +15,14 @@
 </br>
 </br>
 <button type="submit" value="submit">Submit</button>
-</form>
+</form> 
+-->
+<%= form_tag("/users", method: :post) do %>
+<%= label_tag(:username) %>
+<%= text_field_tag(:username) %>
+<%= label_tag(:email, "Email") %>
+<%= email_field_tag(:email, "email@example.com") %>
+<%= label_tag(:userpassword, "Password") %>
+<%= password_field_tag(:password) %>
+<%= submit_tag("submit") %>
+<% end %>
