final version complete

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,37 +1,15 @@
-<!-- html form
+<% if @user.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this article from being saved:</h2>
 
-<form action="/users" method="post" accept-charset="utf-8">
-<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-<label for="username">User name:</label>
-</br>
-<input type="text" id="username" name="user[username]">
-</br>
-<label for="email">Email address:</label>
-</br>
-<input type="email" id="email" name="user[email]" placeholder="your@eamil.com">
-</br>
-<label for="password">Password:</label>
-</br>
-<input type="password" id="password" name="user[password]">
-</br>
-</br>
-<button type="submit" value="submit">Submit</button>
-</form> 
--->
+    <ul>
+      <% @user.errors.each do |error| %>
+        <li><%= error.full_message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 
-<%# form_tag %>
-
-<%# <%= form_tag("/users", method: :post) do %>
-<%#= label_tag(:username) %>
-<%#= text_field_tag(:username) %>
-<%#= label_tag(:email, "Email") %>
-<%#= email_field_tag(:email, "email@example.com") %>
-<%#= label_tag(:userpassword, "Password") %>
-<%#= password_field_tag(:password) %>
-<%#= submit_tag("submit") %>
-<%# end %>
-
-<%# form_with %>
 
 <%= form_with model: @user do |form| %>
 <%= form.label :username %>
